k8s/gateway.yaml
# https://gateway.envoyproxy.io/

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: mygrpc-eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygrpc-eg
spec:
  gatewayClassName: mygrpc-eg
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
