k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygrpc
  labels:
    app: mygrpc
    service: mygrpc
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 8080
  selector:
    app: mygrpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygrpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mygrpc
      version: v1
  template:
    metadata:
      labels:
        app: mygrpc
        version: v1
    spec:
      serviceAccountName: mygrpc
      containers:
        - image: $IMAGE
          imagePullPolicy: IfNotPresent
          name: mygrpc
          ports:
            - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mygrpc
spec:
  parentRefs:
    - name: mygrpc-eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mygrpc
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
